# dominiks-agent-skills

./: .gitignore  README.md
academic-pdf-to-mkd/: .gitignore  README.md  SKILL.md  pyproject.toml
academic-pdf-to-mkd/examples/: example-figure-01.md  example-fulltext.md  example-table-01.md
academic-pdf-to-mkd/scripts/: clean-text.py  detect-engine.py  detect-tables.py  docling-extract.py  extract-figures.sh  extract-pages.sh  extract-pdf.sh  extract-tables.sh  extract-text.sh  mineru-extract.sh  ocr-pdf-for-zotero.sh  ocr-preflight.sh  pymupdf4llm-extract.py  split-copyfriendly-ocr-pdf.py
agents-md-streamline/: README.md  SKILL.md
agents-md-streamline/agents/: openai.yaml
agents-md-streamline/references/: placement-rules.md  related-skills.md  tool-loading.md
agents-md-streamline/scripts/: agents_md_audit.py
claim-fact-checker/: README.md  SKILL.md
claim-fact-checker/presets/: news-tracking.json  paper-reviews.json  research-report.json
claim-fact-checker/references/: verdicts.md
claim-fact-checker/workflows/: fact-check.workflow.js
codex-images-workflow/: README.md  SKILL.md
codex-images-workflow/agents/: openai.yaml
cognitive-walkthrough/: .gitignore  README.md  SKILL.md
cognitive-walkthrough/references/: methodology.md  report-template.md
corpus-tools-skill/: README.md
paper-reviewer-skill/: README.md  SKILL.md
paper-reviewer-skill/references/: best-practices.md  directory-structure.md  setup-architecture.md  templates-guide.md  (+9 more)
project-changelog/: README.md  SKILL.md
project-setup/: README.md  SKILL.md
single-html/: .gitignore
(+179 files in other folders)
